--- a/EmyTestGame/EmyTestGame.vcxproj.filters
+++ b/EmyTestGame/EmyTestGame.vcxproj.filters
@@ -19,4 +19,8 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Shaders\TutoGL.vert" />
+    <None Include="Assets\Shaders\TutoGL.frag" />
+  </ItemGroup>
 </Project>
